# clunk_c

./: .gitignore  CMakeLists.txt
ClunkEngine/: CMakeLists.txt
ClunkEngine/ClunkEngine/: engine.h
ClunkEngine/ClunkEngine/Core/: CMakeLists.txt
ClunkEngine/ClunkEngine/Core/Core/: app_instance.h  application.c  application.h  entry_point.h  logger.c  logger.h
ClunkEngine/ClunkEngine/PCH/: CMakeLists.txt
ClunkEngine/ClunkEngine/PCH/PCH/: pch.h
ClunkyEditor/: CMakeLists.txt
ClunkyEditor/ClunkyEditor/: editor.c  editor.h
